# ACEStream

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ACEStreamConfig.cmake.in  ACEStreamConfigVersion.cmake.in  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPackConfig.cmake  CPackConfig.cmake.in  Makefile.am  README.md  TODO  autogen.sh  config.h.cmake.in  configure.ac  configure.gnu  libACEStream.kdev4  packages.config.in  vcpkg.json
src/: CMakeLists.txt  Makefile.am  stdafx.h  stream.cpp  stream.h  stream_allocatoralignedheap.cpp  stream_allocatoralignedheap.h  stream_allocatoralignedheap.inl  stream_allocatorbase.cpp  stream_allocatorbase.h  stream_allocatorbase.inl  stream_allocatorheap.cpp  stream_allocatorheap.h  stream_allocatorheap.inl  stream_base.cpp  stream_base.h  stream_base.inl  stream_cachedallocatorheap.cpp  stream_cachedallocatorheap.h  stream_cachedallocatorheap.inl  stream_cacheddatablockallocatorheap.cpp  stream_cacheddatablockallocatorheap.h  stream_cacheddatablockallocatorheap.inl  stream_cachedmessageallocator.cpp  stream_cachedmessageallocator.h  stream_cachedmessageallocator.inl  stream_cachedmessageallocatorheap.cpp  stream_cachedmessageallocatorheap.h  stream_cachedmessageallocatorheap.inl  stream_cachedmessageallocatorheap_base.cpp  stream_cachedmessageallocatorheap_base.h  stream_cachedmessageallocatorheap_base.inl  stream_common.h  stream_configuration.cpp  stream_configuration.h  stream_configuration.inl  stream_control_message.cpp  stream_control_message.h  stream_control_message.inl  stream_data_base.cpp  (+125 more)
src/modules/: CMakeLists.txt  Makefile.am
test_i/: .fuse_hidden0000000c00000019  CMakeLists.txt  Makefile.am  stdafx.h  test_i_callbacks.cpp  test_i_callbacks.h  test_i_common.h  test_i_common_modules.h  test_i_configuration.h  test_i_connection_common.h  test_i_connection_manager_common.h  test_i_defines.h  test_i_eventhandler.cpp  test_i_eventhandler.h  test_i_gtk_common.h  test_i_gtk_eventhandler.cpp  test_i_gtk_eventhandler.h  test_i_gtk_eventhandler.inl  test_i_message.cpp  test_i_message.h  test_i_module_eventhandler.cpp  test_i_module_eventhandler.h  test_i_qt_common.h  test_i_session_message.cpp  test_i_session_message.h  test_i_source.cpp  test_i_source_common.h  test_i_source_eventhandler.cpp  test_i_source_eventhandler.h  test_i_source_signalhandler.cpp  test_i_source_signalhandler.h  test_i_source_stream.cpp  test_i_source_stream.h  test_i_source_stream.inl  test_i_target.cpp  test_i_target_common.h  test_i_target_eventhandler.cpp  test_i_target_eventhandler.h  test_i_target_listener_common.h  test_i_target_signalhandler.cpp  (+8 more)
test_i/avsave/: CMakeLists.txt  avsave_wxwidgets_ui.cpp  avsave_wxwidgets_ui.h  stdafx.h  test_i_avsave.cpp  test_i_avsave_common.h  test_i_avsave_common_modules.h  test_i_avsave_defines.h  test_i_avsave_encoder.cpp  test_i_avsave_encoder.h  test_i_avsave_encoder.inl  test_i_avsave_eventhandler.cpp  test_i_avsave_eventhandler.h  test_i_avsave_eventhandler.inl  test_i_avsave_gtk_callbacks.cpp  test_i_avsave_gtk_callbacks.h  test_i_avsave_message.cpp  test_i_avsave_message.h  test_i_avsave_message.inl  test_i_avsave_session_message.cpp  test_i_avsave_session_message.h  test_i_avsave_session_message.inl  test_i_avsave_signalhandler.cpp  test_i_avsave_signalhandler.h  test_i_avsave_stream.cpp  test_i_avsave_stream.h  test_i_avsave_ui.cpp  test_i_avsave_ui.h  test_i_avsave_ui.inl  test_i_avsave_ui_base.cpp  test_i_avsave_ui_base.h
test_i/camera_ar/: CMakeLists.txt  stdafx.h  test_i_camera_ar.cpp  test_i_camera_ar_common.h  test_i_camera_ar_common_modules.h  test_i_camera_ar_configuration.h  test_i_camera_ar_defines.h  test_i_camera_ar_eventhandler.cpp  test_i_camera_ar_eventhandler.h  test_i_camera_ar_eventhandler.inl  test_i_camera_ar_message.cpp  test_i_camera_ar_message.h  test_i_camera_ar_message.inl  test_i_camera_ar_module_cge.cpp  test_i_camera_ar_module_cge.h  test_i_camera_ar_module_cge.inl  test_i_camera_ar_module_pge.cpp  test_i_camera_ar_module_pge.h  test_i_camera_ar_module_pge.inl  test_i_camera_ar_session_message.cpp  test_i_camera_ar_session_message.h  test_i_camera_ar_session_message.inl  test_i_camera_ar_stream.cpp  test_i_camera_ar_stream.h  test_i_camera_ar_stream_common.h  test_i_olc_cge.cpp
test_i/camera_ml/: CMakeLists.txt  stdafx.h  test_i.cpp  test_i_2.cpp  test_i_3.cpp  test_i_camera_ml_common.h  test_i_camera_ml_configuration.h  test_i_camera_ml_defines.h  test_i_camera_ml_defines_3.h  test_i_camera_ml_module_libtorch.cpp  test_i_camera_ml_module_libtorch.h  test_i_camera_ml_module_libtorch.inl  test_i_camera_ml_module_mediapipe.cpp  test_i_camera_ml_module_mediapipe.h  test_i_camera_ml_module_mediapipe.inl  test_i_camera_ml_module_mediapipe_3.cpp  test_i_camera_ml_module_mediapipe_3.h  test_i_camera_ml_module_mediapipe_3.inl  test_i_camera_ml_module_mediapipe_3_box2d.cpp  test_i_camera_ml_module_mediapipe_3_box2d.h  test_i_camera_ml_module_mediapipe_3_box2d.inl  test_i_camera_ml_module_mediapipe_3_liquidfun.cpp  test_i_camera_ml_module_mediapipe_3_liquidfun.h  test_i_camera_ml_module_mediapipe_3_liquidfun.inl  test_i_camera_ml_module_tensorflow.cpp  (+20 more)
test_u/: CMakeLists.txt  Makefile.am  stdafx.h  stream.cpp  stream.h  stream_headmoduletask.cpp  stream_headmoduletask.h  stream_message_base.cpp  stream_message_base.h  stream_messageallocatorheap.cpp  stream_messageallocatorheap.h  stream_module_messagehandler.h  stream_module_messagehandler.inl  stream_module_runtimestatistic.cpp  stream_module_runtimestatistic.h  stream_module_runtimestatistic.inl  stream_session_message.cpp  stream_session_message.h  stream_task.cpp  stream_task.h  stream_task.inl  stream_task_asynch.cpp  stream_task_asynch.h  stream_task_synch.cpp  stream_task_synch.h  test_u_common.h  test_u_common_modules.h  test_u_configuration.h  test_u_curses_common.h  test_u_defines.h  test_u_gtk_common.h  test_u_gtk_eventhandler.cpp  test_u_gtk_eventhandler.h  test_u_gtk_eventhandler.inl  test_u_qt_common.h  test_u_tools.cpp  test_u_tools.h  test_u_tools.inl  test_u_wxwidgets_common.h
(+2105 files in other folders)
